// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`imageDifference alphaBackground 1`] = `
Object {
  "pixels": 0,
  "score": 0,
  "scoreRaw": 0,
}
`;

exports[`imageDifference border 1`] = `
Object {
  "pixels": 20,
  "score": 0,
  "scoreRaw": 0.00002544529262086514,
}
`;

exports[`imageDifference boxShadow 1`] = `
Object {
  "pixels": 0,
  "score": 0,
  "scoreRaw": 0,
}
`;

exports[`imageDifference fontAliasing 1`] = `
Object {
  "pixels": 2382,
  "score": 0.012122137404580152,
  "scoreRaw": 0.012122137404580152,
}
`;

exports[`imageDifference imageCompression 1`] = `
Object {
  "pixels": 0,
  "score": 0,
  "scoreRaw": 0,
}
`;

exports[`imageDifference simple 1`] = `
Object {
  "pixels": 507931,
  "score": 0.3110321178163559,
  "scoreRaw": 0.3110321178163559,
}
`;

exports[`imageDifference simple with enough fuzz 1`] = `
Object {
  "pixels": 0,
  "score": 0,
  "scoreRaw": 0,
}
`;
